-Fixed up Timer js plugin -Fixed up Block js plugin -Added jquery-ui plugin for buttons -Added some performance logic for loading data into jqplot

--- a/priv/index.html
+++ b/priv/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Barrage</title>
-		
 		<style type="text/css" title="currentStyle">
 			@import "dist/jquery.jqplot.min.css";
+			@import "css/smoothness/jquery-ui-1.10.2.css";
 			
 			html {
 				font-family: Calibri, Arial, Helvetica, sans-serif;
@@ -24,10 +24,12 @@
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/jquery.blockUI.js"></script>
 		<script type="text/javascript" src="js/jq.stopwatch.js"></script>
+		<script type="text/javascript" src="js/jquery-ui-1.10.2.js"></script>
+		
 	</head>
 	
 	<body id=main>
-	
+		
 	</body>
 
 </html>
