Added toogle medium functionality

--- a/priv/index.html
+++ b/priv/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="dist/plugins/jqplot.canvasTextRenderer.min.js"></script>
 		<script type="text/javascript" src="dist/plugins/jqplot.canvasAxisLabelRenderer.min.js"></script>
 		<script type="text/javascript" src="dist/plugins/jqplot.canvasAxisTickRenderer.min.js"></script>
+		<script type="text/javascript" src="dist/plugins/jqplot.canvasOverlay.min.js"></script>
 		<script type="text/javascript" src="dist/plugins/jqplot.highlighter.min.js"></script>
 		
 		<script type="text/javascript" src="js/main.js"></script>
