--- a/priv/index.html
+++ b/priv/index.html
@@ -12,6 +12,49 @@
 			.jqplot-target {
 				margin-bottom: 50px;
 			}
+			
+			table {
+				font-family:Arial, Helvetica, sans-serif;
+				color:#666;
+				font-size:12px;
+				text-shadow: 1px 1px 0px #fff;
+				background:#eaebec;
+				margin:20px;
+				border:#ccc 1px solid;
+				border-spacing: 0;
+			
+				-moz-border-radius:3px;
+				-webkit-border-radius:3px;
+				border-radius:3px;
+			
+				-moz-box-shadow: 0 1px 2px #d1d1d1;
+				-webkit-box-shadow: 0 1px 2px #d1d1d1;
+				box-shadow: 0 1px 2px #d1d1d1;
+			}
+			table th {
+				padding:11px 15px 12px 15px;
+				border-top:1px solid #fafafa;
+				border-bottom:1px solid #e0e0e0;
+			
+				background: #ededed;
+				background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
+				background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
+			}
+			table tr{
+				text-align: center;
+				padding-left:20px;
+			}
+			table tr td {
+				padding:8px;
+				border-top: 1px solid #ffffff;
+				border-bottom:1px solid #e0e0e0;
+				border-left: 1px solid #e0e0e0;
+				
+				background: #fafafa;
+				background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
+				background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
+			}
+			
 		</style>
 		
 		<script type="text/javascript" src="dist/jquery.min.js"></script>
