-Now Able to read a file contents from a selected <input type=file> -Prepared the POST call -Made UI for Choosing a file and the POSTs call

--- a/priv/index.html
+++ b/priv/index.html
@@ -73,7 +73,10 @@
 	</head>
 	
 	<body id=main>
-		
+		<div id="Post_Data" style="display:none;">
+			<input id="fileChoser" type="file" onchange="pd_showUploadButtons()" style="float:left;" />
+		</div>
+		<div style="clear:both;"></div>
 	</body>
 
 </html>
