Showed the Choose File option to post data. Fixed the Choose File option to remove any existing upload buttons Made sure the PostInfo was receiving the file data

--- a/priv/index.html
+++ b/priv/index.html
@@ -73,7 +73,7 @@
 	</head>
 	
 	<body id=main>
-		<div id="Post_Data" style="display:none;">
+		<div id="Post_Data">
 			<input id="fileChoser" type="file" onchange="pd_showUploadButtons()" style="float:left;" />
 		</div>
 		<div style="clear:both;"></div>
