Project needed the fartscroll (http://theonion.github.io/fartscroll.js/)

--- a/priv/index.html
+++ b/priv/index.html
@@ -69,6 +69,7 @@
 		<script type="text/javascript" src="js/jquery.blockUI.js"></script>
 		<script type="text/javascript" src="js/jq.stopwatch.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.10.2.js"></script>
+		<script type="text/javascript" src="js/fartscroll.js"></script>
 		
 	</head>
 	
