Got the first past at streamind data working.  It is rough around the edges but for the most part it works and that is pretty awesome!  Closes feature:https://github.com/cjimison/barrage/issues/46

--- a/priv/index2.html
+++ b/priv/index2.html
@@ -65,7 +65,16 @@
 		<script type="text/javascript" src="dist/plugins/jqplot.canvasOverlay.min.js"></script>
 		<script type="text/javascript" src="dist/plugins/jqplot.highlighter.min.js"></script>
 		
-		<script type="text/javascript" src="js/main2.js"></script>
+                <script src="RGraph/libraries/RGraph.common.core.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.annotate.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.context.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.zoom.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.effects.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.resizing.js" ></script>
+                <script src="RGraph/libraries/RGraph.common.dynamic.js" ></script>
+                <script src="RGraph/libraries/RGraph.line.js" ></script>
+                
+                <script type="text/javascript" src="js/main2.js"></script>
 		<script type="text/javascript" src="js/jquery.blockUI.js"></script>
 		<script type="text/javascript" src="js/jq.stopwatch.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.10.2.js"></script>
