Removed Modify-able Gunners in General (Admin.js) Removed Commanders link in General Enabled the POST of changes in General Renamed function to appropriate naming schema in Commander (commander.js) Removed toggleInputs in common.js

--- a/priv/admin.html
+++ b/priv/admin.html
@@ -54,7 +54,7 @@
 		</table>
 		
 		<div style="width: 300px; text-align: right;">
-			<input type="button" class="toggle showfirst" value="Modify" onclick='toggleInputs()'/>
+			<input type="button" class="toggle showfirst" value="Modify" onclick='$(".toggle").toggle();'/>
 			<input type="button" class="toggle" value="Save" onclick='SaveChanges()'/>
 			<input type="button" class="toggle" value="Cancel" onclick='SetInfo()'/>
 		</div>
