Fixed bug in commander.html that was not allowing disconnects and reconnects

--- a/priv/commander.html
+++ b/priv/commander.html
@@ -43,8 +43,8 @@
 		</div>
 		
 		<div style="width: 300px; text-align: right;">
-			<input type="button" class="toggle showfirst" value="Disconnect" onclick='GeneralAction("disconnect")'/>
-			<input type="button" class="toggle" value="Connect" onclick='GeneralAction("connect")'/>
+			<input type="button" class="toggle showfirst" value="Disconnect" onclick='CommanderAction("disconnect")'/>
+			<input type="button" class="toggle" value="Connect" onclick='CommanderAction("connect")'/>
 		</div>
 	</body>
 
