Added another JSON editor tool (tool2) and reorganized the original JSON editor tool (tool) - comparing editor tools to see which one fits our need.

--- a/apps/site/priv/tool.html
+++ b/apps/site/priv/tool.html
@@ -4,10 +4,10 @@
 	<!-- This source/tool was copied from http://www.alkemis.com/johnsonRod/ -->
 	<title>JSON Tool</title>
 
-	<link href="/css/tool.css" type="text/css" rel="stylesheet">
+	<link href="/tool/tool.css" type="text/css" rel="stylesheet">
 
 	<script type="text/javascript" src="/dist/jquery.min.js"></script>
-	<script language="javascript" src="/dist/tool.js" type="text/javascript"></script>
+	<script language="javascript" src="/tool/tool.js" type="text/javascript"></script>
 
 <script>
 
@@ -74,7 +74,7 @@ Paste JSON (or XML) below |
 
 Need to debug your JSON? Go to <a href="http://www.jslint.com" target="_blank">JSLint</a>. Think JSLint is just plain mean? Try <a href="http://www.jshint.com" target="_blank">JSHint</a>.
 <div id="messageDIV" class="messageCloseDIV " style="display:none; ">
-	<img id="messageCloseIMG" src="../dist/toolimages/popupClose.gif" onclick="jR.messageClose(); " title="Close">
+	<img id="messageCloseIMG" src="/tool/images/popupClose.gif" onclick="jR.messageClose(); " title="Close">
 	<div id="messageContentDIV"></div>
 </div>
 
