tools.html added -shows the the general/behaviors & general/actions using the JSON tool separated in an iframe
Also fixed some javascript errors in the plugins.

--- a/apps/site/priv/tool.html
+++ b/apps/site/priv/tool.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html manifest="/cache.manifest">
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 
@@ -46,7 +46,7 @@
 
     <script type="text/javascript" src="/tool/jsoneditor-min.js"></script>
     <script type="text/javascript" src="/tool/ace-min.js"></script>
-    <script type="text/javascript" src="/tool/app-min.js"></script>
+    <script type="text/javascript" src="/tool/app.js"></script>
 </head>
 
 <body>
@@ -115,7 +115,7 @@
     app.resize();
 </script>
 
-<script type="text/javascript" src="/tool2/jsonlint.js"></script>
+<script type="text/javascript" src="/tool/jsonlint.js"></script>
 
 </body>
 </html>
