--- a/apps/site/priv/tools.html
+++ b/apps/site/priv/tools.html
@@ -3,8 +3,9 @@
 	<style media="screen" type="text/css">
 		body { overflow: hidden;}
 		iframe {
-			width: 100%;
-			height: 50%;
+			float: left;
+			width: 50%;
+			height: 100%;
 			border-style: none;
 			border-color: inherit;
 			border-width: 0px;
