--- a/apps/site/priv/jtool.html
+++ b/apps/site/priv/jtool.html
@@ -25,6 +25,7 @@
             background-color: #f5f5f5;
         }
         html, body {
+            font: 12px Arial, Helvetica, sans-serif;
             height: 98%;
             overflow: hidden;
         }
@@ -33,10 +34,55 @@
             width: 49%;
             height: 100%;
         }
+        #notification_message p {
+            margin: 0px;
+        }
+        #notification_message h1,
+        #notification_message h2,
+        #notification_message h3,
+        #notification_message h4,
+        #notification_message h5 {
+            margin: 0 0 5px 0;
+        }
+        #notification_message {
+            background-size: 40px 40px;
+            background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
+                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
+                            transparent 75%, transparent);                                      
+            box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
+            width: 100%;
+            border: 1px solid;
+            color: #fff;
+            padding: 15px;
+            position: fixed;
+            _position: absolute;
+            text-shadow: 0 1px 0 rgba(0,0,0,.5);
+            z-index: 1000;
+            -webkit-animation: animate-bg 5s linear infinite; /* Safari and Chrome */
+            animation: animate-bg 5s linear infinite;
+        }
+
+        @-webkit-keyframes animate-bg  /* Safari and Chrome */{
+            from {
+                background-position: 0 0;
+            }
+            to {
+               background-position: -80px 0;
+            }
+        }
+        @keyframes animate-bg {
+            from {
+                background-position: 0 0;
+            }
+            to {
+               background-position: -80px 0;
+            }
+        }
 
     </style>
 </head>
 <body>
+    <div id="notification_message"></div>
     <div id="jsoneditor_behaviors" class="jsonContainer"></div>
     <div id="jsoneditor_actions" class="jsonContainer"></div>
 </body>
