Replaced OFFICERS and ORDERS tabs to show their respected tools by temporarily using iframes

--- a/apps/site/priv/main/index.html
+++ b/apps/site/priv/main/index.html
@@ -16,6 +16,9 @@
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
+            iframe {
+                border: none;
+            }
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -48,8 +51,8 @@
 <!-- OFFICERS PAGE -->
   <div class="tab-pane" id="Officers">
     <div class="container">
-      <div> I am a general </div>
-      <div> I am a commander </div>
+      <iframe scrolling="no" style="height:325px;width:49%;" src="../admin.html"></iframe>
+      <iframe scrolling="no" style="height:325px;width:49%;" src="../commander.html"></iframe>
     </div>
   </div> <!-- end Officers page (server admin setup of generals and officers) -->
 
@@ -57,7 +60,7 @@
 <!-- ORDERS PAGE -->
   <div class="tab-pane" id="Orders">
     <div class="container">
-      <a href="http://www.jsoneditoronline.org/">Json Tool</a> goes here.
+      <iframe scrolling="no" style="height:700px;width:100%;" src="../jtool.html"></iframe>
     </div>
   </div> <!-- end Orders page (the json tool with actions and behaviors) -->
 
