--- a/apps/site/priv/main/index.html
+++ b/apps/site/priv/main/index.html
@@ -36,13 +36,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Barrage server load testing</a>
+          <h4 class="navbar-brand" href="#">Barrage<br><small>Server Load Testing</small></h4>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#Officers" data-toggle="tab">OFFICERS (servers)</a></li>
-            <li><a href="#Orders" data-toggle="tab">ORDERS (behaviors and actions)</a></li>
-            <li class="active" ><a href="#Attack" data-toggle="tab">ATTACK (test and results)</a></li>
+            <li><a href="#Officers" data-toggle="tab">OFFICERS<br><small>Network Setup</small></a></li>
+            <li><a href="#Orders" data-toggle="tab">ORDERS<br><small>Behaviors and Actions</small></a></li>
+            <li class="active" ><a href="#Attack" data-toggle="tab">ATTACK<br><small>Test Results</small></a></li>
           </ul>
         </div><!--/.navbar-collapse -->
     </div>
@@ -88,9 +88,9 @@
         </div>
       </div>
 
-      <iframe id="chartFrame" scrolling="no" style="height:700px;width:100%;" src="../index.html"></iframe>
-    </div>
-
+      <div class="container">
+      <iframe id="chartFrame" scrolling="no" style="height:800px;width:100%;" src="../index.html"></iframe>
+       </div>
 
 
     <!-- Orig Design: To be implemented later -->
