Pretty up the charts page

--- a/apps/site/priv/index.html
+++ b/apps/site/priv/index.html
@@ -5,6 +5,9 @@
 		<style type="text/css" title="currentStyle">
 			@import "dist/jquery.jqplot.min.css";
 			@import "css/smoothness/jquery-ui-1.10.2.css";
+			@import "main/css/bootstrap-theme.min.css";
+			@import "main/css/bootstrap.min.css";
+			@import "main/css/main.css";
 			
 			html {
 				font-family: Calibri, Arial, Helvetica, sans-serif;
@@ -13,7 +16,7 @@
 				margin-bottom: 50px;
 			}
 			
-			table {
+/*			table {
 				font-family:Arial, Helvetica, sans-serif;
 				color:#666;
 				font-size:12px;
@@ -53,7 +56,7 @@
 				background: #fafafa;
 				background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
 				background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
-			}
+			}*/
 			
 		</style>
 		
@@ -73,9 +76,8 @@
 		
 	</head>
 	
-	<body id=main>
+	<body id='main'>
 		<div id="Post_Data">
-			<input id="fileChoser" type="file" onchange="pd_showUploadButtons()" style="float:left;" />
 		</div>
 		<div style="clear:both;"></div>
 	</body>
