--- a/apps/site/priv/main/index.html
+++ b/apps/site/priv/main/index.html
@@ -55,7 +55,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#Officers" data-toggle="tab">OFFICERS<br><small>Network Setup</small></a></li>
             <li><a href="#Orders" data-toggle="tab">ORDERS<br><small>Behaviors and Actions</small></a></li>
-            <li class="active" ><a href="#Attack" data-toggle="tab">Execute<br><small>Test Results</small></a></li>
+            <li class="active" ><a href="#Attack" data-toggle="tab">EXECUTE<br><small>Test Results</small></a></li>
           </ul>
         </div><!--/.navbar-collapse -->
     </div>
