Added Upload button to allow users to upload a JSON file to the server

--- a/apps/site/priv/jtool.html
+++ b/apps/site/priv/jtool.html
@@ -82,6 +82,7 @@
     </style>
 </head>
 <body>
+    <input id="inputfile" type="file" style="display: none;">
     <div id="notification_message"></div>
     <div id="jsoneditor_behaviors" class="jsonContainer"></div>
     <div id="jsoneditor_actions" class="jsonContainer"></div>
