--- a/apps/site/priv/index.html
+++ b/apps/site/priv/index.html
@@ -5,7 +5,7 @@
 		<style type="text/css" title="currentStyle">
 			@import "dist/jquery.jqplot.min.css";
 			@import "css/smoothness/jquery-ui-1.10.2.css";
-			@import "main/css/bootstrap-theme.min.css";
+			/*@import "main/css/bootstrap-theme.min.css";*/
 			@import "main/css/bootstrap.min.css";
 			@import "main/css/main.css";
 			
