--- a/apps/site/priv/admin.html
+++ b/apps/site/priv/admin.html
@@ -5,9 +5,11 @@
 		<style type="text/css" title="currentStyle">
 			@import "dist/jquery.jqplot.min.css";
 			@import "css/smoothness/jquery-ui-1.10.2.css";
+			@import "css/bootstrap/css/bootstrap.min.css";
 			@import "css/common.css";
 		</style>
-		
+
+
 		<script type="text/javascript" src="dist/jquery.min.js"></script>
 		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/admin.js"></script>
@@ -25,6 +27,11 @@
 			<div>
 				<label>General Name:</label>
 				<span id="GeneralName"></span>
+				<div id="modify">
+					<input type="button" class="btn btn-primary btn-xs toggle showfirst" value="Modify" onclick='$(".toggle").toggle();'/>
+					<input type="button" class="btn btn-default btn-xs toggle" value="Cancel" onclick='SetInfo()'/>
+					<input type="button" class="btn btn-primary btn-xs toggle" value="Save" onclick='SaveChanges()'/>
+				</div>
 			</div>
 			<div>
 				<label for="input_TargetServer">Target Server:</label>
@@ -42,8 +49,7 @@
 				<input id="input_NetworkName" class="toggle" type="text"/>
 			</div>
 		</div>
-		
-		<table id="GeneralCommanders">
+		<table class="table" id="GeneralCommanders">
 			<thead>
 				<tr>
 					<th>Commander Name</th><th>Num. of Gunners</th>
@@ -53,15 +59,11 @@
 			</tbody>
 		</table>
 		
-		<div style="width: 300px; text-align: right;">
-			<input type="button" class="toggle showfirst" value="Modify" onclick='$(".toggle").toggle();'/>
-			<input type="button" class="toggle" value="Save" onclick='SaveChanges()'/>
-			<input type="button" class="toggle" value="Cancel" onclick='SetInfo()'/>
-		</div>
 		
-		<div id="Post_Data">
+		
+<!-- 		<div id="Post_Data">
 			<input id="fileChoser" type="file" onchange="pd_showUploadButtons()" style="float:left;" />
-		</div>
+		</div> -->
 		<div style="clear:both;"></div>
 	</body>
 
