Fix for JSONTOOL - Insert CUSTOM template Increased width of bootstrap container.

--- a/apps/site/priv/index.html
+++ b/apps/site/priv/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="lib/jsoneditor-2.3.3/jsoneditor.css">
-        <link rel="stylesheet" href="lib/bootstrap-3.0.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="lib/bootstrap-3.0.1/css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
        
         <script type="text/javascript" src="lib/jquery/jquery-1.10.2.min.js"></script>
