--- a/apps/site/priv/index.html
+++ b/apps/site/priv/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <!--meta name="viewport" content="width=device-width"-->
 
         <link rel="stylesheet" href="lib/jsoneditor-2.3.3/jsoneditor.css">
         <link rel="stylesheet" href="lib/bootstrap-3.0.1/css/bootstrap.css">
@@ -56,7 +56,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <h4 class="navbar-brand" href="#">Barrage<br><small>Server Load Testing</small></h4>
+            <a class="navbar-brand" style="color:#999999">Barrage<br><small>Server Load Testing</small></a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -109,7 +109,7 @@
                   </tbody>
                 </table>
               </div>
-              <div class="col-lg-6">
+              <div class="col-xs-6">
                 <div id="Commander" style="line-height:30px;">
                   <div>
                     <label>Commander Name:</label>
@@ -157,11 +157,11 @@
         <div class="tab-pane active" id="Execute">
           <div class="container">
             <div class-"row">
-              <div id="ChartOrders" class="col-lg-12"></div>
+              <div id="ChartOrders" class="col-xs-12"></div>
             </div>
             <div class="row">
-              <div id="MainChart" class="col-lg-10"></div>
-              <div class="col-lg-2">
+              <div id="MainChart" class="col-xs-10"></div>
+              <div class="col-xs-2">
                 <div class="panel panel-primary">
                   <div class="panel-heading">Chart Type</div>
                   <div class="panel-body">
