Stylized General Commander’s Table

--- a/apps/site/priv/index.html
+++ b/apps/site/priv/index.html
@@ -115,7 +115,7 @@
                     <table id="GeneralCommanders" class="table table-bordered table-striped">
                       <thead>
                         <tr>
-                          <th colspan="2" class="text-center" style="background-color: #237CA8">Commanders</th>
+                          <th colspan="2" class="text-center" style="color:#3a87ad; background-color:#d9edf7">Commanders</th>
                         </tr>
                         <tr>
                           <th>Commander Name</th>
